# mt-pyredner

active_zero2/: config.py  test.py  train.py  train_2dadv.py  train_adv.py  train_df.py  train_inpainting.py
active_zero2/datasets/: build_dataset.py  messytable.py
active_zero2/inpainting/: func.py  inpaint_AR.py  inpaint_cpms.py  inpaint_cpp.py  inpaint_d2d.py
active_zero2/inpainting/ConfPatchProp/: CMakeLists.txt
active_zero2/inpainting/ConfPatchProp/src/: main.cpp  pms_propagation.cpp  pms_propagation.h  pms_types.h
active_zero2/inpainting/PatchMatchStereo/: CMakeLists.txt
active_zero2/inpainting/PatchMatchStereo/src/: PatchMatchStereo.cpp  PatchMatchStereo.h  main.cpp
active_zero2/models/: build_model.py
active_zero2/utils/: metrics.py  reprojection.py
configs/: edward_psmnet.yml  edward_smdnet.yml  example.yml  example_psmnetrange.yml  jianyu_psmgrad.yml  jianyu_psmgrad_local.yml
data_rendering/: gen_stereo_depth_noise.py  gen_stereo_depth_noise_ss.py  gen_stereo_depth_ss_real.py  nerf_data.py  render_scene.py  render_scene_tro.py  render_script.py  render_script_tro.py
diff_retrieval/: EP002.pth  compute_depth_gradient.py  diffbm_utils.py  inferrence.py  job-pyredner.yaml  job-render-thin-rdlightrdpat-01.yaml  log.diff_retrieval.22-11-11_21-12-11.txt  log.diff_retrieval.22-11-11_21-13-59.txt  log.diff_retrieval.22-11-11_21-16-30.txt  retieve.py  retieve_2.py  retieve_ir.py
scripts/: test.sh  train.sh
tests/: dataset_stats.py  test_dataset.py
tools/: check_normal_map.py  compare_reproj_loss.py  gen_normal_map.py
(+184 files in other folders)
